--- a/css/style.css
+++ b/css/style.css
@@ -1,10 +1,14 @@
+#fullscreenoverlay{
+	overflow: hidden;
+}
 #fullscreeneditor{
-    position: absolute !important;
+    position: fixed !important;
 	top:0;
 	left: 0;
 	right:0;
 	bottom: 0;
+	z-index:1000;
 }
 #fullscreeneditor .ck-editor__editable.ck-rounded-corners.ck-editor__editable_inline, #fullscreeneditor .ck.ck-editor__main {
-    height: 95%;
+    height: 100%;
 }
